--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EncryptIt Web App</title>
+<title>Encrypt_It Web App</title>
 <style>
   body { font-family: Arial, sans-serif; }
   #app { margin: 20px; }
@@ -12,9 +12,9 @@
 </head>
 <body>
 <div id="app">
-  <h1>Welcome to EncryptIt</h1>
+  <h1>Welcome to Encrypt_It</h1>
   <input type="text" id="inputText" placeholder="Enter text">
-  <input type="text" id="inputPassword" placeholder="Enter password">
+  <input type="text" id="inputPassword" placeholder="Encryption Key">
   <button onclick="encrypt()">Encrypt</button>
   <button onclick="decrypt()">Decrypt</button>
   <p id="output"></p>
