--- a/index.html
+++ b/index.html
@@ -3,8 +3,72 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Encrypt_It Web App</title>
+<title>Crypt_It Web App</title>
 <style>
+  /* Reset some default styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Center the app in the middle of the page */
+#app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+  background-color: #f7f7f7;
+  padding: 20px;
+}
+
+h1 {
+  color: #333;
+  margin-bottom: 20px;
+}
+
+/* Style the input fields */
+input[type="text"] {
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* Style the buttons */
+button {
+  background-color: #0078D7;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056a3;
+}
+
+/* Style the output message */
+#output {
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #e2e2e2;
+  width: 300px;
+  word-wrap: break-word;
+}
+  
   body { font-family: Arial, sans-serif; }
   #app { margin: 20px; }
   input, button { margin: 10px 0; }
@@ -12,7 +76,7 @@
 </head>
 <body>
 <div id="app">
-  <h1>Welcome to Encrypt_It</h1>
+  <h1>Welcome to Crypt_It</h1>
   <input type="text" id="inputText" placeholder="Enter text">
   <input type="text" id="inputPassword" placeholder="Encryption Key">
   <button onclick="encrypt()">Encrypt</button>
